--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,8 +8,10 @@
 	<header style="background-color: #FF0000; height: 70px; width: 100%;">
 		
 	</header>
-	<footer style="background-color: #00FF00; height: 60px; width: 100%;position: absolute; bottom: 0;display: flex; align-items: center; justify-content: center;">
+	<footer style="background-color: #00FF00; height: 60px; width: 100%;position: absolute;bottom: 0;display: flex;justify-content: center;align-items: center;">
+
 		Best School
 	</footer>
+
 </body>
 </html>
