--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,19 +1,21 @@
 <!-- Esayas Aregawi first HTML and CSS Project-->
 <!DOCTYPE html>
-<html>
-<head>
-	<title>AirBnB clone</title>
-	<link rel="stylesheet" href="styles/3-common.css">
-	<link rel="stylesheet" href="styles/3-header.css">
-	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
-</head>
-<body>
-	<header>
-		<a href="#"></a>
-	</header>
-	<footer>
-		Best School
-	</footer>
-</body>
+<html lang="en">
+    <head>
+        <title>AirBnB clone</title>
+        <link rel="icon" href="images/icon.png">
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        
+    </head>
+    <body>
+        <header>
+            <a href="#"></a>
+        </header>
+
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
